# LearnOpenGL

./: CMakeLists.txt  glad.c  gpt给出关于gpu粒子的回答.txt  main.cpp
application/: CMakeLists.txt
application/camera/: Camera.cpp  Camera.h  OrthoGraphicCamera.cpp  OrthoGraphicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
assets/shaders/: triangle.frag  triangle.vert
include/glad/: glad.h
lib/: glfw3.lib
shader/: CMakeLists.txt  shader.cpp  shader.h
wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
